Fix basesourceswitcher toolbar mode item padding too low vs (now fixed) line height

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/basesourceswitcher.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/basesourceswitcher.scss
@@ -19,7 +19,7 @@ $panelBorderColor: #888 !default;
       display: none;
     }
     .basesourcegroup, .basesourcesetswitch {
-      padding: 0 5px;
+      padding: 5px;
       background-color: mix($backgroundColor, $textColor, 80%);
       &:hover, &[data-state="active"]{
         background-color: $backgroundColor;
